# image_processor_HSE

./: CMakeLists.txt  app.cpp  app.h  base_filter.cpp  base_filter.h  bitmap.cpp  bitmap.h  cmd_arg_parser.cpp  cmd_arg_parser.h  filter_pipeline.cpp  filter_pipeline.h  filter_pipeline_factory.cpp  filter_pipeline_factory.h  filters.cpp  filters.h  image_processor.cpp  readme.md  test.cpp
cmake/: TestSolution.cmake
